[gd_scene load_steps=5 format=3 uid="uid://buo7oqybgs30l"]

[ext_resource type="Script" path="res://scripts/office/object/working_table_1.gd" id="1_6fim2"]
[ext_resource type="Shader" path="res://shaders/sprite_outline.gdshader" id="2_5tigg"]
[ext_resource type="Texture2D" uid="uid://b7n40afbwlmdg" path="res://assets/tilesets/office/table_1.png" id="2_aw8gr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lcyji"]
shader = ExtResource("2_5tigg")
shader_parameter/outline_width = 0.0
shader_parameter/outline_color = Color(1, 1, 1, 1)

[node name="working_table_1" type="StaticBody2D"]
position = Vector2(4.5, -3.5)
script = ExtResource("1_6fim2")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_lcyji")
position = Vector2(1, -4.5)
texture = ExtResource("2_aw8gr")
region_rect = Rect2(800, 345, 57, 23)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -29.0
offset_top = -11.0
offset_right = 28.0
offset_bottom = 12.0

[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
[connection signal="mouse_entered" from="Control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_control_mouse_exited"]
